--- a/staticLayout/index.html
+++ b/staticLayout/index.html
@@ -32,7 +32,7 @@
 		  <img src="./disney.png"></img>
 		</div>
 	  <div class="box twoBox">
-			<p>BUNDLE AaaND SAVE OVER 25%
+			<p>BUNDLE AND SAVE OVER 25%
 			Get Hulu, Disney+, and ESPN+ for $12.99/month.</p>
 		</div>
 	  <div class="box threeBox">
