--- a/staticLayout/index-backup.html
+++ b/staticLayout/index-backup.html
@@ -16,13 +16,12 @@
 </nav>
 
 <header id="home">
-  	<h5 class="header-tag">TRY UP TO ONE MONTH FREE</h5>
+  	<h5 class="header-try">TRY UP TO ONE MONTH FREE</h5>
   	<center><img src="hulu-logo.png" alt="" width="300" height="100" id="hulu"/></center>
-  	<h2 class="header-tag">Watch thousands of shows and movies, with plans starting at&nbsp;</h2>
-  	<h2 class="header-tag">$5.99/month.</h2>
+  	<h2 class="header-tag">Watch thousands of shows and movies, with plans starting at <br>$5.99/month.</h2>
 	  <h4 class="header-tag">HBO Max™, SHOWTIME®, CINEMAX® and STARZ® available as add-ons.</h4>
-	  <h2 class="button1"><center>START YOUR FREE TRIAL</center></h2>
-	<h6 class="header-tag">Free trial for new &amp; eligible returning subscribers only../</h6>
+	  <h2 class="button1"><a href="#" style="text-decoration:none">START YOUR FREE TRIAL</a></h2>
+	<h6 class="header-tag">Free trial for new &amp; eligible returning subscribers only.</h6>
 </header>
 	<section>
 		<div class="middle">
@@ -32,14 +31,29 @@
 		  <img src="./disney.png"></img>
 		</div>
 	  <div class="box twoBox">
-			<p>BUNDLE AND SAVE OVER 25%
-			Get Hulu, Disney+, and ESPN+ for $12.99/month.</p>
+			<p class="bundle">BUNDLE AND SAVE OVER 25%</p>
+			<p class="get">Get Hulu, Disney+, and ESPN+ for $12.99/month.</p>
+			<p class="more">More Details</p>
 		</div>
 	  <div class="box threeBox">
    		<p>Here is a box three.</p>
 		</div>
 	</section>
-
+<div class="black">
+	<br>
+	<br>
+  	<h6 class="header-try">INCLUDED IN ALL PLANS</h6>
+  	<h2 class="header-tag">All The TV You Love</h2>
+	  <h5 class="header-tag">Stream full seasons of exclusive series, current-season episodes, hit
+		<br>movies, Hulu Originals, kids shows, and more.</h5>
+		<br>
+		<div class="mugs">
+			<a href="#"><img class="a" src="./a.png"></img></a>
+			<a href="#"><img class="b" src="./b.png"></img></a>
+			<a href="#"><img class="c" src="./c.png"></img></a>
+			<a href="#"><img class="d" src="./d.png"></img></a>
+		</div>
+</div>
 	
 </body>
 </html>
